[project]
name = "ft_package"
version = "0.0.1"
description = "A sample test package"
readme = "README.md"
authors = [{name = "msousa", email = "msousa@student.s19.be"}]
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = []

[project.urls]
"Homepage" = "https://github.com/msousa/ft_package"